--- a/src/js/Components/Search/search.scss
+++ b/src/js/Components/Search/search.scss
@@ -3,13 +3,13 @@
 
 .search {
   position: relative;
-  overflow: hidden;
 
   &__container {
     align-items: center;
     display: flex;
     flex-flow: column nowrap;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 230px);
+    min-height: rem(350px);
     justify-content: center;
     position: relative;
     z-index: 50;
@@ -21,6 +21,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     &:before {
       background-color: rgba(0, 0, 0, .3);
@@ -34,6 +35,7 @@
 
   &__video {
     position: relative;
+    width: 100%;
     z-index: 20;
   }
 
