--- a/src/style/utils/_icons.scss
+++ b/src/style/utils/_icons.scss
@@ -32,4 +32,12 @@
     margin-top: rem(-1px);
     width: rem(22px);
   }
+
+  &--left-arrow,
+  &--right-arrow {
+    fill: #768084;
+    height: rem(18px);
+    transition: all 150ms ease-in-out;
+    width: rem(18px);
+  }
 }
