--- a/src/js/Components/UsersList/users-list.scss
+++ b/src/js/Components/UsersList/users-list.scss
@@ -26,6 +26,7 @@
   display: flex;
   flex-flow: row wrap;
   margin: 0 rem(-8px) rem(30px);
+  justify-content: center;
   counter-reset: item;
 
   &__item {
