--- a/src/js/Components/Container/FooterMenu/footer-menu.scss
+++ b/src/js/Components/Container/FooterMenu/footer-menu.scss
@@ -2,7 +2,7 @@
 @import "../../../../style/utils/_variables.scss";
 
 .footer-menu {
-  flex: 0 0 auto;
+  flex: 1 1 rem(300px);
 
   &__list {
     align-items: center;
@@ -14,6 +14,11 @@
 
   &__item {
     flex: 0 0 auto;
+    margin: rem(2px) 0;
+
+    @media(min-width: $media-lg) {
+      margin: 0;
+    }
 
     &:first-child:before {
       display: none;
@@ -22,8 +27,13 @@
     &:before {
       content: '|';
       color: #aaa;
+      display: none;
       font-size: rem(12px);
       font-weight: 400;
+
+      @media(min-width: $media-lg) {
+        display: block;
+      }
     }
   }
 
