--- a/src/js/Components/Presentational/Copyright/copyright.scss
+++ b/src/js/Components/Presentational/Copyright/copyright.scss
@@ -6,6 +6,13 @@
   display: inline-block;
   font-size: rem(12px);
   font-weight: 400;
-  flex: 0 0 auto;
+  flex: 1 1 auto;
   letter-spacing: rem(.5);
+  text-align: center;
+  margin-bottom: rem(10px);
+
+  @media(min-width: $media-lg) {
+    text-align: left;
+    margin-bottom: 0;
+  }
 }
