--- a/src/js/Components/Container/FooterMenu/footer-menu.scss
+++ b/src/js/Components/Container/FooterMenu/footer-menu.scss
@@ -4,24 +4,42 @@
 .footer-menu {
   flex: 1 1 rem(600px);
 
+  @media(min-width: $media-lg) {
+    flex: 0 0 auto;
+  }
+
   &__list {
     align-items: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: rem(3px);
+
+    @media(min-width: $media-lg) {
+      justify-content: flex-end;
+    }
   }
 
   &__item {
     flex: 0 0 auto;
     margin: rem(2px) 0;
 
-    @media(min-width: $media-lg) {
+    @media(min-width: $media-xl) {
       margin: 0;
     }
 
     &:first-child:before {
       display: none;
+    }
+
+    &:last-child {
+
+      @media(min-width: $media-lg) {
+        .footer-menu__link {
+          padding-right: 0;
+        }  
+      }
+
     }
 
     &:before {
@@ -31,8 +49,8 @@
       font-size: rem(12px);
       font-weight: 400;
 
-      @media(min-width: $media-lg) {
-        display: block;
+      @media(min-width: $media-xl) {
+        display: inline-block;
       }
     }
   }
