--- a/src/js/Components/Container/Menu/menu.scss
+++ b/src/js/Components/Container/Menu/menu.scss
@@ -3,6 +3,10 @@
 
 .menu {
 
+  @media(min-width: $media-lg) {
+    width: 100%;
+  }
+
   &--on {
     .menu__env {
       opacity: 1;
@@ -42,14 +46,19 @@
     z-index: -1;
     width: 100%;
 
-    @media(orientation: landscape) {
+    @media(orientation: landscape) and (min-width: $media-xs) {
       padding-top: rem(30px);
+      padding-bottom: rem(60px);
     }
 
     @media(min-width: $media-lg) {
       flex: 1 1 auto;
       flex-flow: row nowrap;
       padding: 0;
+      position: static;
+      visibility: visible;
+      opacity: 1;
+      width: 100%;
     }
   }
 
@@ -148,7 +157,7 @@
     text-transform: uppercase;
     transition: all 150ms ease-in-out;
 
-    @media(orientation: landscape) {
+    @media(orientation: landscape) and (min-width: $media-xs) {
       font-size: rem(14px);
       margin-bottom: rem(5px);
     }
