--- a/src/js/Components/Presentational/Footer/footer.scss
+++ b/src/js/Components/Presentational/Footer/footer.scss
@@ -6,7 +6,7 @@
   margin-top: rem(50px);
   padding: 0;
 
-  @media(min-width: $media-lg) {
+  @media(min-width: $media-xl) {
     margin-top: rem(85px);
   }
 
@@ -17,7 +17,7 @@
     justify-content: space-between;
     padding: rem(20px) 0;
 
-    @media(min-width: $media-lg) {
+    @media(min-width: $media-xl) {
       height: rem(60px);
       padding: 0;
     }
