--- a/src/js/Components/Presentational/Map/map.scss
+++ b/src/js/Components/Presentational/Map/map.scss
@@ -4,7 +4,7 @@
 .map {
   margin-bottom: rem(35px);
 
-  @media(min-width: $media-lg) {
+  @media(min-width: $media-xl) {
     margin-bottom: rem(65px);
   }
 
@@ -12,7 +12,7 @@
   &__container {
     padding-top: rem(30px);
 
-    @media(min-width: $media-lg) {
+    @media(min-width: $media-xl) {
       padding-top: rem(60px);
     }
 
@@ -25,11 +25,11 @@
     flex-wrap: wrap;
     margin-bottom: rem(40px);
 
-    @media(orientation: landscape) {
+    @media(orientation: landscape) and (min-width: $media-xs) {
       justify-content: space-between;
     }
 
-    @media(min-width: $media-lg) {
+    @media(min-width: $media-xl) {
       justify-content: space-between;
       margin-bottom: rem(60px);
     }
@@ -47,11 +47,11 @@
     margin-bottom: rem(10px);
     text-align: center;
 
-    @media(orientation: landscape) {
+    @media(orientation: landscape) and (min-width: $media-xs) {
       text-align: left;
     }
 
-    @media(min-width: $media-lg) {
+    @media(min-width: $media-xl) {
       font-size: rem(26px);
       letter-spacing: rem(.8px);
       margin-bottom: rem(20px);
@@ -61,15 +61,19 @@
   &__map {
     margin: 0 rem(-25px);
 
-    @media(min-width: $media-lg) {
+    @media(min-width: $media-xl) {
       margin: 0;
     }
     iframe {
       height: rem(300px);
       width: 100%;
 
-      @media(orientation: landscape) {
+      @media(orientation: landscape) and (min-width: $media-xs) {
         height: rem(250px);
+      }
+
+      @media(min-width: $media-lg) {
+        height: rem(350px);
       }
     }
   }
@@ -101,12 +105,12 @@
   justify-content: center;
   margin-bottom: rem(20px);
 
-  @media(orientation: landscape) {
+  @media(orientation: landscape) and (min-width: $media-xs) {
     justify-content: flex-start;
     margin-bottom: 0;
   }
 
-  @media(min-width: $media-lg) {
+  @media(min-width: $media-xl) {
     justify-content: flex-start;
     margin-bottom: 0;
   }
@@ -117,7 +121,7 @@
     font-weight: 500;
     letter-spacing: rem(.2px);
 
-    @media(min-width: $media-lg) {
+    @media(min-width: $media-xl) {
       font-size: rem(15px);
       letter-spacing: rem(.5px);
     }
@@ -130,7 +134,7 @@
       content: '•';
       margin: 0 rem(5px);
 
-      @media(min-width: $media-lg) {
+      @media(min-width: $media-xl) {
         margin: 0 rem(15px);
       }
 
