--- a/src/js/Components/Container/Menu/menu.scss
+++ b/src/js/Components/Container/Menu/menu.scss
@@ -34,7 +34,7 @@
     background-color: $color01;
     display: flex;
     flex-flow: column nowrap;
-    height: 100%;
+    height: 100vh;
     justify-content: space-between;
     padding: rem(50px) 0 rem(75px);
     position: absolute;
@@ -52,6 +52,7 @@
     }
 
     @media(min-width: $media-lg) {
+      background-color: transparent;
       flex: 1 1 auto;
       flex-flow: row nowrap;
       padding: 0;
