--- a/src/js/Components/Container/UsersList/users-list.scss
+++ b/src/js/Components/Container/UsersList/users-list.scss
@@ -2,6 +2,15 @@
 @import "../../../../style/utils/_variables.scss";
 
 .users {
+
+  &.section--active {
+    .users-list__item {
+      bottom: 0;
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
   &__amount {
     color: #333;
     display: block;
@@ -47,7 +56,27 @@
     margin: rem(8px);
     max-width: rem(276px);
     counter-increment: item;
-    transition: all 150ms ease-in-out;
+    transition: all 1.5s ease-in-out, border 150ms ease-in-out;
+    opacity: 0;
+    position: relative;
+    visibility: hidden;
+    bottom: rem(-150px);
+
+    &:nth-child(1n + 1) {
+      transition: all 1s ease-in-out, border 150ms ease-in-out;
+    }
+
+    &:nth-child(1n + 2) {
+      transition: all 1.2s ease-in-out, border 150ms ease-in-out;
+    }
+
+    &:nth-child(1n + 3) {
+      transition: all 1.4s ease-in-out, border 150ms ease-in-out;
+    }
+
+    &:nth-child(1n + 4) {
+      transition: all 1.6s ease-in-out, border 150ms ease-in-out;
+    }
 
     &:nth-child(even) {
       .users-list__clip {
