--- a/src/js/Components/Presentational/Map/map.scss
+++ b/src/js/Components/Presentational/Map/map.scss
@@ -8,6 +8,27 @@
     margin-bottom: rem(65px);
   }
 
+  &.section--active {
+    .map__info,
+    .map__button,
+    .map__map {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .map__info {
+      left: 0;
+    }
+
+    .map__button {
+      right: 0;
+    }
+
+    .map__map {
+      bottom: 0;
+    }
+  }
+
 
   &__container {
     padding-top: rem(30px);
@@ -37,6 +58,11 @@
 
   &__info {
     flex: 0 0 auto;
+    position: relative;
+    opacity: 0;
+    visibility: hidden;
+    left: rem(-150px);
+    transition: all 1.2s ease-in-out;
   }
 
   &__subtitle {
@@ -60,6 +86,11 @@
 
   &__map {
     margin: 0 rem(-25px);
+    position: relative;
+    opacity: 0;
+    visibility: hidden;
+    bottom: rem(-100px);
+    transition: all 1.5s ease-in-out;
 
     @media(min-width: $media-xl) {
       margin: 0;
@@ -89,8 +120,12 @@
     height: rem(50px);
     letter-spacing: rem(.3px);
     outline: none;
+    position: relative;
+    opacity: 0;
+    visibility: hidden;
+    right: rem(-150px);
     text-transform: uppercase;
-    transition: all 150ms ease-in-out;
+    transition: all 1.2s ease-in-out, color 150ms ease-in-out;
     width: rem(190px);
 
     &:hover {
