--- a/src/js/Components/Container/Menu/menu.scss
+++ b/src/js/Components/Container/Menu/menu.scss
@@ -55,6 +55,7 @@
       background-color: transparent;
       flex: 1 1 auto;
       flex-flow: row nowrap;
+      height: auto;
       padding: 0;
       position: static;
       visibility: visible;
